@@ -1,5 +1,5 @@
 /*
- * Copyright 2000-2015 JetBrains s.r.o.
+ * Copyright 2000-2017 JetBrains s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,7 @@ package com.intellij.ide.script;
 
 import com.intellij.ide.extensionResources.ExtensionsRootType;
 import com.intellij.ide.plugins.PluginManagerCore;
+import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.components.ApplicationComponent;
 import com.intellij.openapi.diagnostic.Logger;
@@ -24,15 +25,16 @@ import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.project.ProjectManager;
-import com.intellij.openapi.project.ProjectManagerAdapter;
+import com.intellij.openapi.project.ProjectManagerListener;
 import com.intellij.openapi.startup.StartupManager;
-import com.intellij.openapi.util.Condition;
 import com.intellij.openapi.util.Pair;
+import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.openapi.vfs.VfsUtilCore;
-import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.util.ObjectUtils;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.JBIterable;
+import com.intellij.util.messages.MessageBusConnection;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.ide.PooledThreadExecutor;
@@ -40,96 +42,58 @@ import org.jetbrains.ide.script.IdeScriptEngine;
 import org.jetbrains.ide.script.IdeScriptEngineManager;
 import org.jetbrains.ide.script.IdeScriptException;
 
+import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
-class IdeStartupScripts extends ApplicationComponent.Adapter {
+class IdeStartupScripts implements ApplicationComponent {
   private static final Logger LOG = Logger.getInstance(IdeStartupScripts.class);
 
   private static final String SCRIPT_DIR = "startup";
 
   @Override
   public void initComponent() {
-    if (ApplicationManager.getApplication().isUnitTestMode()) return;
-
-    scheduleStartupScriptsExecution();
-  }
-
-  private static void scheduleStartupScriptsExecution() {
-    List<VirtualFile> scripts = getScripts();
-    LOG.info(scripts.size() + " startup script(s) found");
-    if (scripts.isEmpty()) return;
-
-    final Future<List<Pair<VirtualFile, IdeScriptEngine>>> scriptsAndEnginesFuture = prepareScriptEnginesAsync(scripts);
-    ProjectManager.getInstance().addProjectManagerListener(new ProjectManagerAdapter() {
-      final AtomicBoolean myScriptsExecutionStarted = new AtomicBoolean();
-
+    Application application = ApplicationManager.getApplication();
+    if (application.isUnitTestMode()) return;
+    MessageBusConnection connection = application.getMessageBus().connect();
+    connection.subscribe(ProjectManager.TOPIC, new ProjectManagerListener() {
+      Future<List<Pair<File, IdeScriptEngine>>> future;
       @Override
-      public void projectOpened(final Project project) {
+      public void projectOpened(Project project) {
+        if (future == null) {
+          future = PooledThreadExecutor.INSTANCE.submit(() -> prepareScriptsAndEngines());
+        }
         StartupManager.getInstance(project).runWhenProjectIsInitialized(() -> {
-          if (project.isDisposed()) return;
-          if (!myScriptsExecutionStarted.compareAndSet(false, true)) return;
-          ProjectManager.getInstance().removeProjectManagerListener(this);
-          runAllScriptsImpl(project);
+          if (!project.isOpen()) return;
+          connection.disconnect();
+          runAllScriptsImpl(project, future);
         });
-      }
-
-      private void runAllScriptsImpl(@NotNull Project project) {
-        try {
-          for (Pair<VirtualFile, IdeScriptEngine> pair : scriptsAndEnginesFuture.get()) {
-            try {
-              if (pair.second == null) {
-                LOG.warn(pair.first.getPath() + " not supported (no script engine)");
-              }
-              else {
-                runImpl(project, pair.first, pair.second);
-              }
-            }
-            catch (Exception e) {
-              LOG.warn(e);
-            }
-          }
-        }
-        catch (ProcessCanceledException e) {
-          LOG.warn("... cancelled");
-        }
-        catch (InterruptedException e) {
-          LOG.warn("... interrupted");
-        }
-        catch (Exception e) {
-          LOG.error(e);
-        }
       }
     });
   }
 
   @NotNull
-  private static Future<List<Pair<VirtualFile, IdeScriptEngine>>> prepareScriptEnginesAsync(@NotNull final List<VirtualFile> scripts) {
-    return PooledThreadExecutor.INSTANCE.submit(() -> prepareScriptEngines(scripts));
-  }
+  private static List<Pair<File, IdeScriptEngine>> prepareScriptsAndEngines() {
+    List<File> scripts = getScripts();
+    LOG.info(scripts.size() + " startup script(s) found");
+    if (scripts.isEmpty()) return Collections.emptyList();
 
-  @NotNull
-  private static List<Pair<VirtualFile, IdeScriptEngine>> prepareScriptEngines(@NotNull List<VirtualFile> scripts) {
     IdeScriptEngineManager scriptEngineManager = IdeScriptEngineManager.getInstance();
-    List<Pair<VirtualFile, IdeScriptEngine>> result = ContainerUtil.newArrayList();
-    for (VirtualFile script : scripts) {
-      String extension = script.getExtension();
-      IdeScriptEngine engine = extension != null ? scriptEngineManager.getEngineForFileExtension(extension, null) : null;
+    List<Pair<File, IdeScriptEngine>> result = ContainerUtil.newArrayList();
+    for (File script : scripts) {
+      String extension = FileUtilRt.getExtension(script.getName());
+      IdeScriptEngine engine = extension.isEmpty() ? null : scriptEngineManager.getEngineForFileExtension(extension, null);
       result.add(Pair.create(script, engine));
     }
     return result;
   }
 
   private static void runImpl(@NotNull Project project,
-                              @NotNull VirtualFile script,
-                              @NotNull IdeScriptEngine engine) throws ExecutionException, IOException, IdeScriptException {
-    String scriptText = VfsUtilCore.loadText(script);
+                              @NotNull File script,
+                              @NotNull IdeScriptEngine engine) throws IOException, IdeScriptException {
+    String scriptText = FileUtil.loadFile(script);
     IdeConsoleScriptBindings.ensureIdeIsBound(project, engine);
 
     LOG.info(script.getPath());
@@ -143,17 +107,11 @@ class IdeStartupScripts extends ApplicationComponent.Adapter {
   }
 
   @NotNull
-  private static List<VirtualFile> getScripts() {
-    List<VirtualFile> scripts;
-    try {
-      VirtualFile scriptDir = getScriptsRootDirectory();
-      VirtualFile[] scriptDirChildren = scriptDir != null ? scriptDir.getChildren() : VirtualFile.EMPTY_ARRAY;
-      Condition<VirtualFile> regularFileFilter = ExtensionsRootType.regularFileFilter();
-      scripts = Arrays.stream(scriptDirChildren).filter(regularFileFilter::value).collect(Collectors.toList());
-    }
-    catch (IOException ignore) {
-      return Collections.emptyList();
-    }
+  private static List<File> getScripts() {
+    File directory = getScriptsRootDirectory();
+    List<File> scripts = JBIterable.of(directory == null ? null : directory.listFiles())
+      .filter(ExtensionsRootType.regularFileFilter())
+      .toList();
 
     ContainerUtil.sort(scripts, (f1, f2) -> {
       String f1Name = f1 != null ? f1.getName() : null;
@@ -164,8 +122,40 @@ class IdeStartupScripts extends ApplicationComponent.Adapter {
   }
 
   @Nullable
-  private static VirtualFile getScriptsRootDirectory() throws IOException {
+  private static File getScriptsRootDirectory() {
     PluginId corePlugin = ObjectUtils.assertNotNull(PluginId.findId(PluginManagerCore.CORE_PLUGIN_ID));
-    return ExtensionsRootType.getInstance().findResourceDirectory(corePlugin, SCRIPT_DIR, false);
+    try {
+      return ExtensionsRootType.getInstance().findResourceDirectory(corePlugin, SCRIPT_DIR, false);
+    }
+    catch (IOException ignore) {
+    }
+    return null;
+  }
+
+  private static void runAllScriptsImpl(@NotNull Project project, @NotNull Future<List<Pair<File, IdeScriptEngine>>> future) {
+    try {
+      for (Pair<File, IdeScriptEngine> pair : future.get()) {
+        try {
+          if (pair.second == null) {
+            LOG.warn(pair.first.getPath() + " not supported (no script engine)");
+          }
+          else {
+            runImpl(project, pair.first, pair.second);
+          }
+        }
+        catch (Exception e) {
+          LOG.warn(e);
+        }
+      }
+    }
+    catch (ProcessCanceledException e) {
+      LOG.warn("... cancelled");
+    }
+    catch (InterruptedException e) {
+      LOG.warn("... interrupted");
+    }
+    catch (Exception e) {
+      LOG.error(e);
+    }
   }
 }
