@@ -15,38 +15,46 @@
  */
 package git4idea.ui.branch;
 
+import com.intellij.dvcs.repo.Repository;
 import com.intellij.dvcs.ui.BranchActionGroup;
 import com.intellij.dvcs.ui.NewBranchAction;
 import com.intellij.dvcs.ui.PopupElementWithAdditionalInfo;
-import com.intellij.openapi.actionSystem.ActionGroup;
-import com.intellij.openapi.actionSystem.AnAction;
-import com.intellij.openapi.actionSystem.AnActionEvent;
-import com.intellij.openapi.actionSystem.DefaultActionGroup;
+import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.components.ServiceManager;
 import com.intellij.openapi.project.DumbAwareAction;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.Messages;
+import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.containers.ContainerUtil;
+import git4idea.GitBranch;
+import git4idea.GitLocalBranch;
+import git4idea.actions.GitAbstractRebaseAction;
 import git4idea.branch.GitBranchUtil;
 import git4idea.branch.GitBrancher;
+import git4idea.branch.GitBranchesCollection;
 import git4idea.branch.GitNewBranchOptions;
+import git4idea.rebase.GitRebaseSpec;
 import git4idea.repo.GitRepository;
+import git4idea.repo.GitRepositoryManager;
 import git4idea.validators.GitNewBranchNameValidator;
+import icons.DvcsImplIcons;
 import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 
 import static com.intellij.dvcs.ui.BranchActionGroupPopup.wrapWithMoreActionIfNeeded;
 import static com.intellij.dvcs.ui.BranchActionUtil.FAVORITE_BRANCH_COMPARATOR;
 import static com.intellij.dvcs.ui.BranchActionUtil.getNumOfTopShownBranches;
+import static com.intellij.util.ObjectUtils.notNull;
 import static git4idea.GitStatisticsCollectorKt.reportUsage;
 import static git4idea.GitUtil.HEAD;
 import static git4idea.branch.GitBranchType.LOCAL;
 import static git4idea.branch.GitBranchType.REMOTE;
-import static java.util.stream.Collectors.toList;
+import static java.util.Arrays.asList;
 
 class GitBranchPopupActions {
 
@@ -66,6 +74,12 @@ class GitBranchPopupActions {
     DefaultActionGroup popupGroup = new DefaultActionGroup(null, false);
     List<GitRepository> repositoryList = Collections.singletonList(myRepository);
 
+    if (myRepository.isRebaseInProgress()) {
+      GitRebaseSpec rebaseSpec = GitRepositoryManager.getInstance(myProject).getOngoingRebaseSpec();
+      popupGroup.addAll(
+        rebaseSpec != null && isSpecForRepo(rebaseSpec, myRepository) ? getRebaseActions() : createPerRepoRebaseActions(myRepository));
+    }
+
     popupGroup.addAction(new GitNewBranchAction(myProject, repositoryList));
     popupGroup.addAction(new CheckoutRevisionActions(myProject, repositoryList));
 
@@ -74,26 +88,74 @@ class GitBranchPopupActions {
     }
 
     popupGroup.addSeparator("Local Branches" + repoInfo);
-    List<BranchActionGroup> localBranchActions =
-      myRepository.getBranches().getLocalBranches().stream()
-        .sorted()
-        .filter(branch -> !branch.equals(myRepository.getCurrentBranch()))
-        .map(branch -> new LocalBranchActions(myProject, repositoryList, branch.getName(), myRepository))
-        .collect(toList());
+    GitLocalBranch currentBranch = myRepository.getCurrentBranch();
+    GitBranchesCollection branchesCollection = myRepository.getBranches();
+
+    List<LocalBranchActions> localBranchActions = StreamEx.of(branchesCollection.getLocalBranches())
+      .filter(branch -> !branch.equals(currentBranch))
+      .map(GitBranch::getName)
+      .sorted(StringUtil::naturalCompare)
+      .map(localName -> new LocalBranchActions(myProject, repositoryList, localName, myRepository))
+      .sorted(FAVORITE_BRANCH_COMPARATOR)
+      .toList();
+    int topShownBranches = getNumOfTopShownBranches(localBranchActions);
+    if (currentBranch != null) {
+      localBranchActions.add(0, new CurrentBranchActions(myProject, repositoryList, currentBranch.getName(), myRepository));
+      topShownBranches++;
+    }
     // if there are only a few local favorites -> show all;  for remotes it's better to show only favorites; 
-    wrapWithMoreActionIfNeeded(myProject, popupGroup, ContainerUtil.sorted(localBranchActions, FAVORITE_BRANCH_COMPARATOR),
-                               getNumOfTopShownBranches(localBranchActions), firstLevelGroup ? GitBranchPopup.SHOW_ALL_LOCALS_KEY : null,
+    wrapWithMoreActionIfNeeded(myProject, popupGroup, localBranchActions,
+                               topShownBranches, firstLevelGroup ? GitBranchPopup.SHOW_ALL_LOCALS_KEY : null,
                                firstLevelGroup);
 
     popupGroup.addSeparator("Remote Branches" + repoInfo);
-    List<BranchActionGroup> remoteBranchActions =
-      myRepository.getBranches().getRemoteBranches().stream()
-        .sorted()
-        .map(remoteBranch -> new RemoteBranchActions(myProject, repositoryList, remoteBranch.getName(), myRepository))
-        .collect(toList());
+    List<RemoteBranchActions> remoteBranchActions = StreamEx.of(branchesCollection.getRemoteBranches())
+      .map(GitBranch::getName)
+      .sorted(StringUtil::naturalCompare)
+      .map(remoteName -> new RemoteBranchActions(myProject, repositoryList, remoteName, myRepository))
+      .toList();
     wrapWithMoreActionIfNeeded(myProject, popupGroup, ContainerUtil.sorted(remoteBranchActions, FAVORITE_BRANCH_COMPARATOR),
                                getNumOfTopShownBranches(remoteBranchActions), firstLevelGroup ? GitBranchPopup.SHOW_ALL_REMOTES_KEY : null);
     return popupGroup;
+  }
+
+  private static boolean isSpecForRepo(@NotNull GitRebaseSpec spec, @NotNull GitRepository repository) {
+    Collection<GitRepository> repositoriesFromSpec = spec.getAllRepositories();
+    return repositoriesFromSpec.size() == 1 && repository.equals(ContainerUtil.getFirstItem(repositoriesFromSpec));
+  }
+
+  @NotNull
+  private static List<AnAction> createPerRepoRebaseActions(@NotNull GitRepository repository) {
+    return asList(createRepositoryRebaseAction("Git.Rebase.Abort", repository),
+                  createRepositoryRebaseAction("Git.Rebase.Continue", repository),
+                  createRepositoryRebaseAction("Git.Rebase.Skip", repository));
+  }
+
+  @NotNull
+  static List<AnAction> getRebaseActions() {
+    ActionManager actionManager = ActionManager.getInstance();
+    return asList(actionManager.getAction("Git.Rebase.Abort"),
+                  actionManager.getAction("Git.Rebase.Continue"),
+                  actionManager.getAction("Git.Rebase.Skip"));
+  }
+
+  @NotNull
+  private static AnAction createRepositoryRebaseAction(@NotNull String rebaseActionId, @NotNull GitRepository repository) {
+    GitAbstractRebaseAction rebaseAction = notNull((GitAbstractRebaseAction)ActionManager.getInstance().getAction(rebaseActionId));
+    DumbAwareAction repositoryAction = new DumbAwareAction() {
+
+      @Override
+      public void update(AnActionEvent e) {
+        e.getPresentation().setEnabledAndVisible(repository.isRebaseInProgress());
+      }
+
+      @Override
+      public void actionPerformed(AnActionEvent e) {
+        rebaseAction.performInBackground(repository);
+      }
+    };
+    repositoryAction.getTemplatePresentation().copyFrom(rebaseAction.getTemplatePresentation());
+    return repositoryAction;
   }
 
   public static class GitNewBranchAction extends NewBranchAction<GitRepository> {
@@ -104,7 +166,7 @@ class GitBranchPopupActions {
 
     @Override
     public void actionPerformed(AnActionEvent e) {
-      GitNewBranchOptions options = GitBranchUtil.getNewBranchNameFromUser(myProject, myRepositories, "Create New Branch");
+      GitNewBranchOptions options = GitBranchUtil.getNewBranchNameFromUser(myProject, myRepositories, "Create New Branch", null);
       if (options != null) {
         GitBrancher brancher = GitBrancher.getInstance(myProject);
         if (options.shouldCheckout()) {
@@ -160,9 +222,9 @@ class GitBranchPopupActions {
    */
   static class LocalBranchActions extends BranchActionGroup implements PopupElementWithAdditionalInfo {
 
-    private final Project myProject;
-    private final List<GitRepository> myRepositories;
-    private final String myBranchName;
+    protected final Project myProject;
+    protected final List<GitRepository> myRepositories;
+    protected final String myBranchName;
     @NotNull private final GitRepository mySelectedRepository;
     private final GitBranchManager myGitBranchManager;
 
@@ -198,10 +260,13 @@ class GitBranchPopupActions {
       return new AnAction[]{
         new CheckoutAction(myProject, myRepositories, myBranchName),
         new CheckoutAsNewBranch(myProject, myRepositories, myBranchName),
+        new Separator(),
         new CompareAction(myProject, myRepositories, myBranchName, mySelectedRepository),
+        new Separator(),
         new RebaseAction(myProject, myRepositories, myBranchName),
         new CheckoutWithRebaseAction(myProject, myRepositories, myBranchName),
         new MergeAction(myProject, myRepositories, myBranchName, true),
+        new Separator(),
         new RenameBranchAction(myProject, myRepositories, myBranchName),
         new DeleteAction(myProject, myRepositories, myBranchName)
       };
@@ -245,7 +310,7 @@ class GitBranchPopupActions {
       private final String myBranchName;
 
       CheckoutAsNewBranch(@NotNull Project project, @NotNull List<GitRepository> repositories, @NotNull String branchName) {
-        super("Checkout as New Branch");
+        super("Checkout As...");
         myProject = project;
         myRepositories = repositories;
         myBranchName = branchName;
@@ -270,7 +335,7 @@ class GitBranchPopupActions {
       @NotNull private final String myCurrentBranchName;
 
       public RenameBranchAction(@NotNull Project project, @NotNull List<GitRepository> repositories, @NotNull String currentBranchName) {
-        super("Rename");
+        super("Rename...");
         myProject = project;
         myRepositories = repositories;
         myCurrentBranchName = currentBranchName;
@@ -285,6 +350,14 @@ class GitBranchPopupActions {
           GitBrancher brancher = GitBrancher.getInstance(myProject);
           brancher.renameBranch(myCurrentBranchName, newName, myRepositories);
           reportUsage("git.branch.rename");
+        }
+      }
+
+      @Override
+      public void update(@NotNull AnActionEvent e) {
+        if (myRepositories.stream().anyMatch(Repository::isFresh)) {
+          e.getPresentation().setEnabled(false);
+          e.getPresentation().setDescription("Renaming branch is not possible before the first commit");
         }
       }
     }
@@ -307,6 +380,22 @@ class GitBranchPopupActions {
         brancher.deleteBranch(myBranchName, myRepositories);
         reportUsage("git.branch.delete.local");
       }
+    }
+  }
+
+  static class CurrentBranchActions extends LocalBranchActions {
+    CurrentBranchActions(@NotNull Project project,
+                         @NotNull List<GitRepository> repositories,
+                         @NotNull String branchName,
+                         @NotNull GitRepository selectedRepository) {
+      super(project, repositories, branchName, selectedRepository);
+      setIcons(DvcsImplIcons.CurrentBranchFavoriteLabel, DvcsImplIcons.CurrentBranchLabel, DvcsImplIcons.FavoriteOnHover, DvcsImplIcons.NotFavoriteOnHover);
+    }
+
+    @NotNull
+    @Override
+    public AnAction[] getChildren(@Nullable AnActionEvent e) {
+      return new AnAction[]{new LocalBranchActions.RenameBranchAction(myProject, myRepositories, myBranchName)};
     }
   }
 
@@ -344,9 +433,12 @@ class GitBranchPopupActions {
     public AnAction[] getChildren(@Nullable AnActionEvent e) {
       return new AnAction[]{
         new CheckoutRemoteBranchAction(myProject, myRepositories, myBranchName),
+        new Separator(),
         new CompareAction(myProject, myRepositories, myBranchName, mySelectedRepository),
+        new Separator(),
         new RebaseAction(myProject, myRepositories, myBranchName),
         new MergeAction(myProject, myRepositories, myBranchName, false),
+        new Separator(),
         new RemoteDeleteAction(myProject, myRepositories, myBranchName)
       };
     }
@@ -358,7 +450,7 @@ class GitBranchPopupActions {
 
       public CheckoutRemoteBranchAction(@NotNull Project project, @NotNull List<GitRepository> repositories,
                                         @NotNull String remoteBranchName) {
-        super("Checkout as new local branch");
+        super("Checkout As...");
         myProject = project;
         myRepositories = repositories;
         myRemoteBranchName = remoteBranchName;
@@ -413,7 +505,7 @@ class GitBranchPopupActions {
 
     public CompareAction(@NotNull Project project, @NotNull List<GitRepository> repositories, @NotNull String branchName,
                          @NotNull GitRepository selectedRepository) {
-      super("Compare");
+      super("Compare With...");
       myProject = project;
       myRepositories = repositories;
       myBranchName = branchName;
@@ -437,7 +529,7 @@ class GitBranchPopupActions {
 
     public MergeAction(@NotNull Project project, @NotNull List<GitRepository> repositories, @NotNull String branchName,
                        boolean localBranch) {
-      super("Merge");
+      super("Merge into Current");
       myProject = project;
       myRepositories = repositories;
       myBranchName = branchName;
@@ -465,7 +557,7 @@ class GitBranchPopupActions {
     private final String myBranchName;
 
     public RebaseAction(@NotNull Project project, @NotNull List<GitRepository> repositories, @NotNull String branchName) {
-      super("Rebase onto");
+      super("Rebase Current onto Selected");
       myProject = project;
       myRepositories = repositories;
       myBranchName = branchName;
